Use Android-compatible collection for emitted key-boundary heads